# TestDetector

./: .gitignore  readme.md
.github/agents/: TestGapAnalyzer.md  detectImpactedTests.md
.github/workflows/: pr-test-gap-analyzer.yml
backend/: README.md  pyproject.toml  weather_app_api.py
backend/tests/: test_weather-app-api.py
weather-ui/: README.md  angular.json  package-lock.json  package.json
weather-ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts
weather-ui/src/app/services/: weather.service.spec.ts  weather.service.ts
weather-ui/src/app/weather/: weather.component.html  weather.component.scss  weather.component.spec.ts  weather.component.ts
